[gd_scene load_steps=7 format=3 uid="uid://b3x5h1144wgjd"]

[ext_resource type="Script" path="res://screens/market/shop_item.gd" id="1_64t37"]
[ext_resource type="Texture2D" uid="uid://g6xokcg7ohdb" path="res://assets/images/accessories/shades.png" id="2_47dvm"]

[sub_resource type="LabelSettings" id="LabelSettings_tr3ld"]
font_size = 42
outline_size = 1
outline_color = Color(1, 0.117647, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ke5ks"]
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_ji1bk"]
font_size = 30
font_color = Color(0.941176, 0.470588, 1, 0.584314)
outline_color = Color(0.443137, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bqtgx"]
font_size = 30
font_color = Color(1, 0.219608, 1, 1)

[node name="ShopItem" type="Button"]
custom_minimum_size = Vector2(0, 150)
offset_right = 1080.0
offset_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_64t37")

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -503.0
offset_top = -87.5
offset_right = -68.0
offset_bottom = 87.5
grow_horizontal = 0
grow_vertical = 2
text = "Convincing Mustache"
label_settings = SubResource("LabelSettings_tr3ld")
vertical_alignment = 1
autowrap_mode = 3

[node name="Price" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 266.0
offset_top = -84.5
offset_right = 338.0
offset_bottom = 89.5
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_ke5ks")
vertical_alignment = 1

[node name="IconWrapper" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = -22.5
offset_right = 134.0
offset_bottom = 17.5
grow_vertical = 2

[node name="Icon" type="Sprite2D" parent="IconWrapper"]
position = Vector2(30, 24)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_47dvm")

[node name="OwnedText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 108.0
offset_top = -41.0
offset_right = 222.0
offset_bottom = 1.0
grow_vertical = 0
text = "OWNED"
label_settings = SubResource("LabelSettings_ji1bk")

[node name="EquippedText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = -40.0
offset_right = 236.0
offset_bottom = 2.0
grow_vertical = 0
text = "EQUIPPED"
label_settings = SubResource("LabelSettings_bqtgx")
